name:                test-fun
version:             0.1.0.0
synopsis: Generate, shrink, and show functions for testing higher-order properties
-- description:
homepage:            https://github.com/Lysxia/test-fun#readme
license:             BSD3
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2019 Li-yao Xia
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Test.Fun
    Test.Fun.Internal.CoArbitrary
    Test.Fun.Internal.Orphan
    Test.Fun.Internal.Pretty
    Test.Fun.Internal.Shrink
    Test.Fun.Internal.Types
  build-depends:
    base >= 4.9 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/test-fun
